--- a/.github/workflows/github-repo-stats.yaml
+++ b/.github/workflows/github-repo-stats.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         # The repositories to generate reports for.
-        statsRepo: ['gem/oq-engine', 'gem/oq-irmt-qgis', 'gem/global_exposure_model', 'gem/earthquake-scenarios']
+        statsRepo: ['gem/oq-engine', 'gem/oq-irmt-qgis', 'gem/global_exposure_model', 'gem/earthquake-scenarios', 'gem/global_vulnerability_model', 'gem/oq-taxonomy', 'gem/risk-profiles']
       # Do not cancel&fail all remaining jobs upon first job failure.
       fail-fast: false
       max-parallel: 1
