use GITHUB_ENV to set inter-names env variables [2]

--- a/.github/workflows/windows_lts.yaml
+++ b/.github/workflows/windows_lts.yaml
@@ -34,8 +34,8 @@ on:
   #    branches:
   #      -
   schedule:
-    - cron: "35 14 * * *"
-    - cron: "37 14 * * *"
+    - cron: "22 15 * * *"
+    - cron: "25 15 * * *"
   pull_request:
 jobs:
   Build_Installer:
@@ -50,15 +50,15 @@ jobs:
     steps:
       - name: Default values for GEM_SET_BRANCH and GEM_SET_BRANCH_TOOLS
         run: |
-          echo 'GEM_SET_BRANCH="${{ github.event.inputs.oq-ref }}"' >> $GITHUB_ENV
-          echo 'GEM_SET_BRANCH_TOOLS="${{ github.event.inputs.oq-ref }}"' >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH='${{ github.event.inputs.oq-ref }}'" >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH_TOOLS='${{ github.event.inputs.oq-ref }}'" >> $GITHUB_ENV
       - name: Run for schedule A
-        if: github.event.schedule == '10 15 * * *'
+        if: github.event.schedule == '22 15 * * *'
         run: |
-          echo 'GEM_SET_BRANCH="master"' >> $GITHUB_ENV
-          echo 'GEM_SET_BRANCH_TOOLS="master"' >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH='master'" >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH_TOOLS='master'" >> $GITHUB_ENV
       - name: Run for schedule B
-        if: github.event.schedule == '13 15 * * *'
+        if: github.event.schedule == '25 15 * * *'
         run: |
           echo 'GEM_SET_BRANCH="engine-3.23"' >> $GITHUB_ENV
           echo 'GEM_SET_BRANCH_TOOLS="engine-3.23"' >> $GITHUB_ENV
