add test for global variables (OQ_REL_DEFAULT var) [2]

--- a/.github/workflows/windows_lts.yaml
+++ b/.github/workflows/windows_lts.yaml
@@ -6,7 +6,7 @@ on:
     inputs:
       rel_default:
         description: Test for global var
-        default: ${OQ_REL_DEFAULT}
+        default: ${{env.OQ_REL_DEFAULT}}
         required: true
       debug_enabled:
         type: boolean
