--- a/.github/workflows/windows_with_mtk.yaml
+++ b/.github/workflows/windows_with_mtk.yaml
@@ -27,13 +27,13 @@ jobs:
       - name: Run for schedule A
         if: github.event.schedule == '40 9 * * *'
         run: |
-          echo "GEM_SET_BRANCH='master'" >> $GITHUB_ENV
-          echo "GEM_SET_BRANCH_TOOLS='master'" >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH=master" >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH_TOOLS=master" >> $GITHUB_ENV
       - name: Run for schedule B
         if: github.event.schedule == '50 9 * * *'
         run: |
-          echo 'GEM_SET_BRANCH="engine-3.23"' >> $GITHUB_ENV
-          echo 'GEM_SET_BRANCH_TOOLS="engine-3.23"' >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH=engine-3.23" >> $GITHUB_ENV
+          echo "GEM_SET_BRANCH_TOOLS="engine-3.23" >> $GITHUB_ENV
       - name: Current Variable values
         run: |
           echo "Check variable for build packages"
