--- a/.github/workflows/windows_with_mtk.yaml
+++ b/.github/workflows/windows_with_mtk.yaml
@@ -14,8 +14,8 @@ on:
           - engine-3.23
           - master
   schedule:
-    - cron: "45 9 * * *"
-    - cron: "00 10 * * *"
+    - cron: "00 11 * * *"
+    - cron: "30 11 * * *"
 jobs:
   Build_Installer:
     runs-on: ubuntu-latest
@@ -25,12 +25,12 @@ jobs:
       GEM_SET_BUILD_SCIENCE: 1
     steps:
       - name: Run for schedule A
-        if: github.event.schedule == '10 9 * * *'
+        if: github.event.schedule == '00 11 * * *'
         run: |
           echo "GEM_SET_BRANCH=master" >> $GITHUB_ENV
           echo "GEM_SET_BRANCH_TOOLS=master" >> $GITHUB_ENV
       - name: Run for schedule B
-        if: github.event.schedule == '20 9 * * *'
+        if: github.event.schedule == '30 11 * * *'
         run: |
           echo "GEM_SET_BRANCH=engine-3.23" >> $GITHUB_ENV
           echo "GEM_SET_BRANCH_TOOLS=engine-3.23" >> $GITHUB_ENV
@@ -43,6 +43,8 @@ jobs:
       - name: Clone Repository (Latest)
         uses: actions/checkout@v4
         if: github.event.inputs.git-ref == ''
+        with:
+          ref: ${{GEM_SET_BRANCH}}
       - name: Clone Repository (Custom Ref)
         uses: actions/checkout@v4
         if: github.event.inputs.git-ref != ''
