double curl to have also output

--- a/.github/workflows/windows_package.yml
+++ b/.github/workflows/windows_package.yml
@@ -114,16 +114,20 @@ jobs:
           Write-Host "Test webui and tools Web pages"
           ping 127.0.0.1 -n 6 > null
           Write-Host "curl.exe -I --fail -G http://127.0.0.1:8800/engine"
+          curl.exe -I -G http://127.0.0.1:8800/engine
           curl.exe -I --fail -G http://127.0.0.1:8800/engine
           ping 127.0.0.1 -n 6 > null
           Write-Host "curl.exe -X HEAD -I --fail http://127.0.0.1:8800/ipt/"
+          curl.exe -X HEAD -I http://127.0.0.1:8800/ipt/
           curl.exe -X HEAD -I --fail http://127.0.0.1:8800/ipt/
           ping 127.0.0.1 -n 6 > null
           Write-Host "curl.exe -X HEAD -I --fail http://127.0.0.1:8800/taxonomy/"
+          curl.exe -X HEAD -I http://127.0.0.1:8800/taxonomy/
           curl.exe -X HEAD -I --fail http://127.0.0.1:8800/taxonomy/
           ping 127.0.0.1 -n 6 > null
           oq.exe engine --list-risk-calculations
           Write-Host "curl.exe -v --fail -G http://127.0.0.1:8800/engine/1/outputs"
+          curl.exe -v -G http://127.0.0.1:8800/engine/1/outputs
           curl.exe -v --fail -G http://127.0.0.1:8800/engine/1/outputs
       - name: Upload Artifact WebUI log
         uses: actions/upload-artifact@v4
