--- a/.github/workflows/windows_with_mtk.yaml
+++ b/.github/workflows/windows_with_mtk.yaml
@@ -96,12 +96,16 @@ jobs:
           Write-Host "Test webui and tools Web pages"
           ping 127.0.0.1 -n 6 > null
           curl.exe -I -G http://127.0.0.1:8800/engine
+          curl.exe -I --fail -G http://127.0.0.1:8800/engine
           ping 127.0.0.1 -n 6 > null
           curl.exe -X HEAD -I http://127.0.0.1:8800/ipt/
+          curl.exe -X HEAD --fail -I http://127.0.0.1:8800/ipt/
           ping 127.0.0.1 -n 6 > null
           curl.exe -X HEAD -I http://127.0.0.1:8800/taxonomy/
+          curl.exe -X HEAD --fail -I http://127.0.0.1:8800/taxonomy/
           ping 127.0.0.1 -n 6 > null
           oq.exe engine --list-risk-calculations
+          curl.exe -v -G http://127.0.0.1:8800/engine/1/outputs
           curl.exe -v --fail -G http://127.0.0.1:8800/engine/1/outputs
       - name: Upload Artifact WebUI log
         uses: actions/upload-artifact@v4
