--- a/.github/workflows/windows_package.yml
+++ b/.github/workflows/windows_package.yml
@@ -90,13 +90,22 @@ jobs:
           $Install = Get-ChildItem -Filter *.exe
           Start-Process -FilePath $Install.Fullname -ArgumentList "/S" -Wait
           $env:PATH += ";$env:LOCALAPPDATA\Programs\OpenQuake Engine\python3\Scripts"
-      - name: Run oq
+      - name: Run oq calc 1
         run: |
           $ErrorActionPreference = 'Stop'
+          $PSNativeCommandUseErrorActionPreference = $true
           $env:PATH += ";$env:LOCALAPPDATA\Programs\OpenQuake Engine\python3\Scripts"
           oq.exe --version
           oq.exe engine --run "https://downloads.openquake.org/pkgs/test_event_based_risk_inputs_bc.zip"
           oq.exe engine --run "https://downloads.openquake.org/jobs/M4_Exercise.zip"
+      - name: Run oq calc 2
+        run: |
+          $ErrorActionPreference = 'Stop'
+          $PSNativeCommandUseErrorActionPreference = $true
+          $env:PATH += ";$env:LOCALAPPDATA\Programs\OpenQuake Engine\python3\Scripts"
+          oq.exe engine --run "https://downloads.openquake.org/jobs/M4_Exercise.zip"
+      - name: Display calcs
+        run: |
           oq.exe engine --list-risk-calculations
       - name: Run oq webui console and curl for the standalone tools
         timeout-minutes: 10
