--- a/.github/workflows/windows_package.yml
+++ b/.github/workflows/windows_package.yml
@@ -96,9 +96,7 @@ jobs:
           $PSNativeCommandUseErrorActionPreference = $true
           $env:PATH += ";$env:LOCALAPPDATA\Programs\OpenQuake Engine\python3\Scripts"
           oq.exe --version
-          oq.exe engine --run "https://downloads.openquake.org/pkgs/test_event_based_risk_inputs_bc.zip"
-          echo %ERRORLEVEL%
-          echo $LASTEXITCODE
+          oq.exe engine --run "https://downloads.openquake.org/jobs/eb_risk_demo.zip"
           Write-Host "Exit code $LastExitCode"
           oq.exe engine --run "https://downloads.openquake.org/jobs/M4_Exercise.zip"
           Write-Host "Exit code $LastExitCode"
