--- a/.github/workflows/github-repo-stats.yaml
+++ b/.github/workflows/github-repo-stats.yaml
@@ -1,10 +1,10 @@
 name: Statistic of Repo
 
 on:
-  schedule:
+  #schedule:
     # Run this once per day, towards the end of the day for keeping the most
     # recent data point most meaningful (hours are interpreted in UTC).
-    #- cron: "0 09 * * *"
+  #- cron: "0 09 * * *"
   workflow_dispatch: # Allow for running this manually.
 
 jobs:
